vlib/v/checker/tests/custom_comptime_define_error.out
vlib/v/checker/tests/custom_comptime_define_error.vv:6:6: error: undefined ident: `mysymbol`
    4 |         println('comptime option define works')
    5 |     }
    6 |     $if mysymbol {
      |         ~~~~~~~~
    7 |         // this will produce a checker error when `-d mysymbol` is not given on the CLI
    8 |         println('comptime non-option define works')
vlib/v/checker/tests/custom_comptime_define_error.vv:6:2: error: unknown var: `mysymbol`
    4 |         println('comptime option define works')
    5 |     }
    6 |     $if mysymbol {
      |     ~~~~~~~~~~~~
    7 |         // this will produce a checker error when `-d mysymbol` is not given on the CLI
    8 |         println('comptime non-option define works')
